--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
+bcrypt==4.1.2
 blinker==1.7.0
 click==8.1.7
 dnspython==2.6.1
 email_validator==2.1.1
 Flask==3.0.2
+Flask-Bcrypt==1.0.1
+Flask-Login==0.6.3
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
 idna==3.6
